# embeddings_llm_inference

./: .gitignore  README.md  llm_car_review_context.py  main.py  pyproject.toml
