[project]
name = "embeddings-llm-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.82.0",
    "chromadb>=1.5.0",
    "google-genai>=1.63.0",
    "more-itertools>=10.8.0",
    "openai>=2.21.0",
    "polars>=1.38.1",
    "sentence-transformers>=5.2.3",
]
